--- a/docs/integrador.css
+++ b/docs/integrador.css
@@ -91,4 +91,14 @@ border-style: none;
     flex-direction: column;
 justify-items:center;
 }
-
+.estudiante{
+    width: 200px;
+    height: 200px;
+    background-color: rgb(0, 0, 255);
+}
+.trainee{
+    border: rgb(0, 0, 255);
+}
+.junior{
+    border: #c8ff00;
+}
